@@ -20,15 +20,19 @@
 */
 
 // only process ajax requests
-if (!$OUTPUT->ajax_call)
-  return;
+if (!$OUTPUT->ajax_call) {
+    return;
+}
 
 // count messages before changing anything
 $threading = (bool) $RCMAIL->storage->get_threading();
-$old_count = $RCMAIL->storage->count(NULL, $threading ? 'THREADS' : 'ALL');
-$old_pages = ceil($old_count / $RCMAIL->storage->get_pagesize());
-$sources   = array();
 $trash     = $RCMAIL->config->get('trash_mbox');
+$sources   = array();
+
+if ($_POST['_from'] != 'show') {
+    $old_count = $RCMAIL->storage->count(NULL, $threading ? 'THREADS' : 'ALL');
+    $old_pages = ceil($old_count / $RCMAIL->storage->get_pagesize());
+}
 
 // move messages
 if ($RCMAIL->action == 'move' && !empty($_POST['_uid']) && strlen($_POST['_target_mbox'])) {
@@ -60,7 +64,7 @@ if ($RCMAIL->action == 'move' && !empty($_POST['_uid']) && strlen($_POST['_targe
     }
 
     if (!empty($_POST['_refresh'])) {
-        // FIXME: send updated message rows instead of releading the entire list
+        // FIXME: send updated message rows instead of reloading the entire list
         $OUTPUT->command('refresh_list');
     }
     else {
