@@ -1,6 +1,8 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Archive: Don't reload messages list when it's not needed (#5225)
+- Archive: Add option to automatically mark archived messages as \Seen (#5142)
 - Improve randomness of password salts and random hashes (#5266)
 - Password/cPanel: Add support for hash authentication and reseller accounts (#5252)
 - Support host-specific imap_conn_options/smtp_conn_options/managesieve_conn_options (#5136)
